why u take over whole page?

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -1,6 +1,5 @@
 <script src="{{ url_for('static', filename='jquery.calendar.min.js') }}"  >
   </script>
 
-<script>
- $(function(){ $('.myCalendar').cal(); });
+<script src="{{ url_for('static', filename='ourCalendar.js') }}"  >
 </script>
