--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,8 @@
  {%  block content %}
   <h1>Home</h1>
 
-  <div class="myCalendar"></div>
-  
+  <div>
+    <div id="myCalendar">
+    </div>
+  </div>
  {%  endblock %}
